--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-mongodb+srv://carlosApiRest:<password>@cluster0.vmb75to.mongodb.net/?retryWrites=true&w=majority
+DB_URI=mongodb+srv://carlosApiRest:juanma4200@cluster0.vmb75to.mongodb.net/?retryWrites=true&w=majority
 
 PORT= 4000
+PUBLIC_URL =http://localhost:4000
